--- a/views/events.ejs
+++ b/views/events.ejs
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <!-- EVENTBRITE TEST -->
+    <!-- EVENTBRITE TEST (Extra for if we had more time)-->
     <div id="events-container">
         <% events.forEach(function(event) { %>
           <div>
