--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,92 +6,77 @@
     <!-- keep for collapsing navbar-->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="icon" href="/resources/Screenshot 2023-12-05 at 8.56.01 PM.png" type="image/x-icon">
-
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <title>Home</title>
-    
-    
 </head>
 <body>
     <style>
         .nav-item {
-        list-style: none;
+            list-style: none;
         }
         
         .covered {
-        position:relative; /* make a new "render context", so absolute positioning is relative to this parent container */
-
-        padding:30px; /* only needed for this demo */
+            position: relative;
+            padding: 30px;
         }
         .covered-img {
-        background:url('/resources/44afc8_b3821d1f8dfc44c78ab589e5ee89fccf~mv2.webp');
-        opacity: .50;
+            background: url('/resources/44afc8_b3821d1f8dfc44c78ab589e5ee89fccf~mv2.webp');
+            opacity: .50;
 
-        background-size:cover; /* cover will scale the image so that the smallest dimension = the widest dimension of the box */
-        background-position:center; /* vs the top-left that is default */
+            background-size: cover;
+            background-position: center;
         
-        position:absolute; /* take me out of the render context! let me define my own positioning */
-        top:0;bottom:0;left:0;right:0; /* this could also work with width:100%; height:100%;, but is simpler */
+            position:absolute;
+            top:0;
+            bottom:0;
+            left:0;
+            right:0;
         }
 
-        
-
     </style>
-        <h2 class="p-3 bg-opacity-10 fs-6 fw-lighter text-center">Provo Social Media Usage and Mental Health Committee</h2>
-        <nav class="navbar sticky-top navbar-expand-lg navbar" style="background-color: #2596be;" data-bs-theme="dark">
-            <a class="navbar-brand" href="/">
-                <img src="/resources/Current_flag_of_Provo,_Utah.svg.png" width="65" height="35" alt="">
-            </a>
-            <a class="navbar-brand">Provo Community</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-            </button>
+    <h2 class="p-3 bg-opacity-10 fs-6 fw-lighter text-center">Provo Social Media Usage and Mental Health Committee</h2>
+    <!-- Navbar -->
+    <nav class="navbar sticky-top navbar-expand-lg navbar" style="background-color: #2596be;" data-bs-theme="dark">
+        <a class="navbar-brand" href="/">
+            <img src="/resources/Current_flag_of_Provo,_Utah.svg.png" width="65" height="35" alt="">
+        </a>
+        <a class="navbar-brand">Provo Community</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+        </button>
 
-            <div class="collapse navbar-collapse text-white" id="navbarSupportedContent">
-                <ul class="navbar-nav mr-auto text-white">
-                    <!--accessing extra
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/customizedAssessment">extra<span class="sr-only"></span></a>
-                    </li>
-                    -->
-                
-                    <!--
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/events">Events<span class="sr-only"></span></a>
-                    </li>
-                    -->
-                    
-                    <!-- Home button -->
-                    <li class="nav-item">
+        <div class="collapse navbar-collapse text-white" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto text-white">                
+                <!-- Home button -->
+                <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="/">Home<span class="sr-only"></span></a>
-                    </li>
-
-                    <!-- Survey -->
-                    <li class="nav-item">
-                        <a class="nav-link active" href="/survey">Survey<span class="sr-only"></span></a>
-                    </li>
-
-                    <!-- Tableau Dashboard -->
-                    <li class="nav-item">
-                        <a class="nav-link active" href="/dashboard">Stats<span class="sr-only"></span></a>
-                    </li>
-
-                    <!-- Admin Dashboard: survey results, etc -->
-                    <li class="nav-item">
-                        <a class="nav-link active" href="/adminDashboard">Workers<span class="sr-only"></span></a>
-                    </li>
-                </ul>
-                <!-- Login -->
-                <li class="nav-item mx-auto me-2">
-                <a class="nav-link" href="/login">Login</a>
                 </li>
-            </div>
-        </nav>
-        <div class="container-fluid">
+
+                <!-- Survey -->
+                <li class="nav-item">
+                    <a class="nav-link active" href="/survey">Survey<span class="sr-only"></span></a>
+                </li>
+
+                <!-- Tableau Dashboard -->
+                <li class="nav-item">
+                    <a class="nav-link active" href="/dashboard">Stats<span class="sr-only"></span></a>
+                </li>
+
+                <!-- Admin Dashboard: survey results, etc -->
+                <li class="nav-item">
+                    <a class="nav-link active" href="/adminDashboard">Workers<span class="sr-only"></span></a>
+                </li>
+            </ul>
+            <!-- Login -->
+            <li class="nav-item mx-auto me-2">
+                <a class="nav-link" href="/login">Login</a>
+            </li>
+        </div>
+    </nav>
+    <div class="container-fluid">
         <br>
         <!-- background image -->
         <div class="row">
@@ -101,105 +86,53 @@
                     Improving Mental Health Together
                 </h1>
                 <br>
-            <div class="card mx-auto" style="width: 25rem;">
-                <img src="/resources/Current_flag_of_Provo,_Utah.svg.png" class="card-img-top" alt="surveyCard">
-                <div class="card-body">
-                    <h5 class="card-title text-center">Help Us Help You</h5>
-                    <p class="card-text text-center">Please take this 2-minute survey that explores the relationship between social media and mental health in Provo</p>
-                    <div class="d-grid gap-2 col-6 mx-auto">
-                        <a href="/survey" class="btn btn-outline-success" role="button" data-bs-toggle="button">Mental Health Survey</a>
+                <div class="card mx-auto" style="width: 25rem;">
+                    <img src="/resources/Current_flag_of_Provo,_Utah.svg.png" class="card-img-top" alt="surveyCard">
+                    <div class="card-body">
+                        <h5 class="card-title text-center">Help Us Help You</h5>
+                        <p class="card-text text-center">Please take this 2-minute survey that explores the relationship between social media and mental health in Provo</p>
+                        <div class="d-grid gap-2 col-6 mx-auto">
+                            <a href="/survey" class="btn btn-outline-success" role="button" data-bs-toggle="button">Mental Health Survey</a>
+                        </div>
                     </div>
                 </div>
             </div>
-            </div>
-        </div>
-        </div>
-        <br>
-        <br>
-        <br>
-        <br>
-        <h1 class="text-center fw-bold display-1">Worried? Stressed? Tired? <br> </h1>
-        <h2 class ="text-center fs-4 fw-bold">Find Mental Health Events Near You !</h2>
-        <br>
-        <br>
-        <img src="/resources/healthandWellness.png" class="img-fluid" alt="healthandWellness">
-        <br>
-        <br>
-        <br>
-        <img src="/resources/healthandWellness3.png" class="img-fluid" alt="healthandWellness">
-        <br>
-
-<!--
-        <div class="container mx-auto">
-        <div id="carouselExampleIndicators" class="carousel slide carousel-container h-25 d-inline-block mx-auto carousel-fade" data-bs-ride="carousel">
-            <div class="carousel-indicators">
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-            </div>
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="/resources/44afc8_b3821d1f8dfc44c78ab589e5ee89fccf~mv2.webp" class="d-block w-100" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="/resources/https___cdn.evbuc.com_images_641653599_868515626953_1_original.jpg" class="d-block w-100" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="/resources/https___cdn.evbuc.com_images_647891039_1642573265253_1_original.jpg" class="d-block w-100" alt="...">
-              </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
-          </div>
-        </div>
-
--->
-        <!-- CAROUSEL SECTION
-    <div class="carousel-container h-25 d-inline-block mx-auto">
-    <div class="carousel-scale">
-        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-            <img class="d-block w-100" src="/resources/https___cdn.evbuc.com_images_647891039_1642573265253_1_original.jpg" alt="First slide">
-            </div>
-            <div class="carousel-item">
-            <img class="d-block w-100" src="/resources/https___cdn.evbuc.com_images_641653599_868515626953_1_original.jpg" alt="Second slide">
-            </div>
-            <div class="carousel-item">
-            <img class="d-block w-100" src="/resources/https___cdn.evbuc.com_images_647891039_1642573265253_1_original.jpg" alt="Third slide">
-            </div>
         </div>
     </div>
-    </div>
-    </div>
-    -->
     <br>
-        <div class="card">
-            <div class="card-body">
+    <br>
+    <br>
+    <br>
+    <h1 class="text-center fw-bold display-1">Worried? Stressed? Tired?</h1>
+    <br>
+    <h2 class ="text-center fs-4 fw-bold">Find Mental Health Events Near You !</h2>
+    <br>
+    <br>
+    <img src="/resources/healthandWellness.png" class="img-fluid" alt="healthandWellness">
+    <br>
+    <br>
+    <br>
+    <img src="/resources/healthandWellness3.png" class="img-fluid" alt="healthandWellness">
+    <br>
+    <br>
+    <div class="card">
+        <div class="card-body">
             <blockquote class="blockquote mb-0 text-center">
                 <p>"Social media are responsible for aggravating mental health problems."</p>
                 <footer class="blockquote-footer"><cite title="Source Title">National Institute of Health</cite></footer>
             </blockquote>
-            </div>
         </div>
-        <br>
-        <br>
-
-      <footer class="py-3 my-4">
+    </div>
+    <br>
+    <br>
+    <footer class="py-3 my-4">
         <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-          <li class="nav-item"><a href="/" class="nav-link px-2 text-muted">Home</a></li>
-          <li class="nav-item"><a href="/survey" class="nav-link px-2 text-muted">Survey</a></li>
-          <li class="nav-item"><a href="/dashboard" class="nav-link px-2 text-muted">Stats</a></li>
-          <li class="nav-item"><a href="/login" class="nav-link px-2 text-muted">Login</a></li>
+            <li class="nav-item"><a href="/" class="nav-link px-2 text-muted">Home</a></li>
+            <li class="nav-item"><a href="/survey" class="nav-link px-2 text-muted">Survey</a></li>
+            <li class="nav-item"><a href="/dashboard" class="nav-link px-2 text-muted">Stats</a></li>
+            <li class="nav-item"><a href="/login" class="nav-link px-2 text-muted">Login</a></li>
         </ul>
         <p class="text-center text-muted">© 2023 SMU MH</p>
-      </footer>
-     
+    </footer>
 </body>
 </html>
