--- a/views/login.ejs
+++ b/views/login.ejs
@@ -74,7 +74,7 @@
                     <label for="show_pass">Show Password</label>
                     <br>
                     <br>
-                    <button type="submit">Log In</button>
+                    <button type="submit" class="btn btn-outline-secondary">Log In</button>
                 </form>
             </div>
         </div>
