social media survey button change

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -92,7 +92,7 @@
                     <h5 class="card-title text-center">Help Us Help You</h5>
                     <p class="card-text text-center">Please take this 2-minute survey that explores the relationship between social media and mental health in Provo</p>
                     <div class="d-grid gap-2 col-6 mx-auto">
-                        <a href="/survey" class="btn btn-outline-success" role="button" data-bs-toggle="button">Mental Health Survey</a>
+                        <a href="/survey" class="btn btn-outline-success" role="button" data-bs-toggle="button">Social Media Survey</a>
                     </div>
                 </div>
             </div>
