--- a/views/modifyAcc.ejs
+++ b/views/modifyAcc.ejs
@@ -8,7 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="icon" href="/resources/Screenshot 2023-12-05 at 8.56.01 PM.png" type="image/x-icon">
-    <link rel="script" href="/scripts/scripts.jsy">
+    <link rel="script" href="/scripts/scripts.js">
     <title>Edit Account</title>
 </head>
 <body>
@@ -75,7 +75,7 @@
                     <input type="password" id="login_password" name="login_password" value="<%= myUsers[0].password%>" required>
                     <br>
                     <br>
-                    <input type="checkbox" id="show_pass" name="show_pass" onclick="ShowPassword()">
+                    <input type="checkbox" id="show_pass" name="show_pass" onclick="showPassword()">
                     <label for="show_pass">Show Password</label>
                     <br><br>
                     <button class="btn mx-auto btn btn-outline-secondary" type="submit">Save</button>
@@ -85,7 +85,7 @@
     </div>
     <script>
         // If box is checked, set the password to be of type text
-        function ShowPassword() {
+        function showPassword() {
             var x = document.getElementById("login_password");
             if (x.type === "password") {
                 x.type = "text";
